Prevent "(for bracket ...)" text to overlap with sponsor images

--- a/css/style.css
+++ b/css/style.css
@@ -277,7 +277,7 @@ a.style {
 }
 
 .sponsors-container a {
-    padding-bottom: 50px;
+    padding-bottom: 225px;
 }
 
 .sponsor {
